--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<a   class="imghvr-hinge-right figure" target="_blank">
 				<img src="images/z7.jpg" alt="" title="Business  Image"/> 
 				<div class="agile-figcaption">
-				  <h4>Restorent Management system </h4>
+				  <h4>Restaurant Management System </h4>
 				  <p></p>
 				</div>
 			</a> 
