--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-calendar-check-o" aria-hidden="true"></i>
 					</div>
 					<h6>Branches</h6>
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='2' data-delay='8' data-increment="1">2</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='2' data-delay='.5' data-increment="1">2</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 stats-grid">
 					<div class="stats-img w3-agileits">
@@ -293,7 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-trophy" aria-hidden="true"></i>
 					</div>
 					<h6>Awards</h6>
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='5' data-delay='8' data-increment="1">5</div>
+					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='5' data-delay='.5' data-increment="1">5</div>
 				</div>
 				<div class="clearfix"></div>
 			</div> 
