--- a/index.html
+++ b/index.html
@@ -476,9 +476,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>LEVANTAR SOLUTIONS PRIVATE LIMITED<br/>
 							Pulparambil complex<br/>	
 							<span>Near viswajyothi engineering college,Vazhakkulam.</span>
+								<span>Ernakulam Dist.</span>
+							<span>Pin : 686670</span>
 						</p>
 						<p class="phone">Phone :+91 82813 61058
-							<span>Email : <a href="mailto:levantarsolution@gmail.com">levantarsolution@gmail.com </a></span>
+							<span>Email:<a href="mailto:levantarsolution@gmail.com">levantarsolution@gmail.com </a></span>
 						</p>
 					</div>
 				</div>
