--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="contact-bottom contact" id="contact">
 		<div class="col-md-6  map">
 			<!--	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387193.30591910525!2d-74.25986432970718!3d40.697149422113014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1510226274125" style="border:0" allowfullscreen></iframe> -->
-				<iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJBWdbMQrEBzsRJz2weCs9j0o&key=AIzaSyAQoDjvDJE_IS3hhWhL9oCJgfG5pWcofMs"  style="border:0" allowfullscreen></iframe> 
+				<iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;coord=9.944643165509989,76.63874530713657&amp;q=LevantarSolutions+(Levantar%20Solutions)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"  style="border:0" allowfullscreen></iframe> 
 
 		</div>
 		<div class="col-md-6 contact-right">
