--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-users" aria-hidden="true"></i>
 					</div>
 					<h6>Happy Clients</h6>
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='200' data-delay='.5' data-increment="100">200</div>
+					<div class='numscroller'>250+</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 stats-grid">
 					<div class="stats-img w3-agileits">
@@ -286,7 +286,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<i class="fa fa-briefcase" aria-hidden="true"></i>
 					</div>	
 					<h6>Our Events </h6> 
-					<div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='200' data-delay='.5' data-increment="10">250</div>
+					<div class='numscroller' >100+</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 stats-grid">
 					<div class="stats-img w3-agileits">
@@ -480,7 +480,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span>Pin : 686670</span>
 						</p>
 						<p class="phone">Phone :+91 82813 61058
-							<span>Email:<a href="mailto:levantarsolution@gmail.com">levantarsolution@gmail.com </a></span>
+							<span>Email:<a href="mailto:levantarsolution@gmail.com">sales@levantarsolutions.in</a>,</span>
+							<span><a href="mailto:levantarsolution@gmail.com">levantarsolution@gmail.com</a></span>
+
 						</p>
 					</div>
 				</div>
