--- a/as_safeguard/index.html
+++ b/as_safeguard/index.html
@@ -97,53 +97,169 @@
           <li class="dropdown nav-item mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
             <ul class="dropdown-menu mega-dropdown-menu">
-              <li><a href="about_ourvalues.html">Our Values</a></li>
-              <li><a href="coming-soon.html">Founders Dream</a></li>
-              <li><a href="coming-soon.html">History</a></li>
-              <li><a href="coming-soon.html">Worldwide</a></li>
-              <li><a href="coming-soon.html">Corporate Policy</a></li>
-              <li><a href="coming-soon.html">Helth and Safety</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Our Values</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Founders Dream</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">History</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Worldwide</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Corporate Policy</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Helth and Safety</a></li>
             </ul>
           </li>
           
           <li class="dropdown nav-item mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Presence<b class="caret"></b></a>
             <ul class="dropdown-menu mega-dropdown-menu">
-                    <li><a href="presence_technology.html">Technology</a></li>
-                    <li><a href="presence_engineering.html">Engineering</a></li>
-                    <li><a href="presence_innovative-farming-techniques.html">Innovative Farming techniques – Ethical farming</a></li>
-                    <li><a href="presence_our-intellectual-property.html">Our Intellectual Property</a></li>
-            </ul>
+                     <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle setColornew" href="#">Technology &#9658;</a>
+                      <ul class="dropdown-menu setPosition">
+                        <li class="dropdown-submenu">
+                          <a class="dropdown-item dropdown-toggle setColornew" href="#">AXpress HealthCare &#9658;</a>
+                          <ul class="dropdown-menu setPosition">
+                            <li><a class="dropdown-item setColornew" href="#">Covid-19 Prevention System</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Testing and Diagnosis</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Pandemic Proof Buildings</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Healthcare Surveillance</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Remote Medical Support systems</a></li>
+                          </ul>
+                        </li>
+                        <li><a class="dropdown-item setColornew" href="#">Artificial Intelligence</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Virtual Reality</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Aeronautics</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">E-commerce Platform</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Smart Homes</a></li>
+                        <li class="dropdown-submenu">
+                          <a class="dropdown-item dropdown-toggle setColornew" href="#">Renewable Energy development &#9658;</a>
+                          <ul class="dropdown-menu setPosition">
+                            <li><a class="dropdown-item setColornew" href="#">Small Hydro Power plants</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Solar Power</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Wind Energy</a></li>
+                          </ul>
+                        </li>
+                        <li><a class="dropdown-item setColornew" href="#">Innovative solution by inventing new technology</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Water technology</a></li>
+
+                      </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle setColornew" href="#">Engineering &#9658;</a>
+                      <ul class="dropdown-menu setPosition">
+                        <li><a class="dropdown-item setColornew" href="#">Value Engineering in Construction</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Full Design and development of turnkey projects in infrastructure</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Slope Stability</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Geotechnical Engineering Consultancy</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Smart homes construction</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Water treatment plants</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Oil and gas utilities </a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Rain water storage</a></li>
+
+                      </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle setColornew" href="#">Innovative Farming techniques – Ethical farming &#9658;</a>
+                      <ul class="dropdown-menu setPosition">
+                        <li><a class="dropdown-item setColornew" href="#">Animal farm</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Waste Management systems</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Bio-degradable farm</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Drone based Agriculture 4.0</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Sustainable farming methodology </a></li>
+                      </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle setColornew" href="#">Anton Academy &#9658;</a>
+                      <ul class="dropdown-menu setPosition">
+                        <li class="dropdown-submenu">
+                          <a class="dropdown-item dropdown-toggle setColornew" href="#">Training and development wing &#9658;</a>
+                          <ul class="dropdown-menu setPosition">
+                            <li><a class="dropdown-item setColornew" href="#">Flight Training and Certification for drones</a></li>
+                            <li><a class="dropdown-item setColornew" href="#">Certificate courses for University students on the application of drones in various industries</a></li>
+                            <li class="dropdown-submenu">
+                              <a class="dropdown-item dropdown-toggle setColornew" href="#">Courses for Skills update &#9658;</a>
+                              <ul class="dropdown-menu setPosition">
+                                <li><a class="dropdown-item setColornew" href="#">Geotechnical engineering </a></li>
+                                <li><a class="dropdown-item setColornew" href="#">Renewable Energy Course</a></li>
+                                <li><a class="dropdown-item setColornew" href="#">Artificial Intelligence</a></li>
+                                <li><a class="dropdown-item setColornew" href="#">UAV All applications</a></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle setColornew" href="#">Our Intellectual Property &#9658;</a>
+                      <ul class="dropdown-menu setPosition">
+                        <li><a class="dropdown-item setColornew" href="#">AXpress HealthCare System</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">AI</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Drone Usage Management and Solutions technologies</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Renewable energy development systems</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Virtual Reality system</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Slope Stabilization system</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Soil stabilization system</a></li>
+                        <li><a class="dropdown-item setColornew" href="#">Smart homes full software architecture</a></li>
+
+                      </ul>
+                    </li>           
+                   </ul>
           </li>
+
+          
+
           <li class="dropdown nav-item mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Products<b class="caret"></b></a>
             <ul class="dropdown-menu mega-dropdown-menu">
-              <li><a href="products.html">Soil Stabilization </a></li>
-              <li><a href="coming-soon.html">Steico</a></li>
-              <li><a href="coming-soon.html">Personal Protective Equipment PPE</a></li>
-              <li><a href="coming-soon.html">Eco- friendly disposables</a></li>
-              <li><a href="coming-soon.html">Food Products</a></li>
-              <li><a href="coming-soon.html">Farming Products</a></li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Soil Stabilization  &#9658;</a>
+                <ul class="dropdown-menu setPosition">
+                  <li><a class="dropdown-item setColornew" href="#">Claylock </a></li>
+                  <li><a class="dropdown-item setColornew" href="#">Plastic Polymer Emulsion PPE</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Steico – All kinds of wooden products for construction as its ecofriendly</a>
+              </li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Personal protective equipment PPE</a>
+              </li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Eco- friendly disposables &#9658;</a>
+                <ul class="dropdown-menu setPosition">
+                  <li><a class="dropdown-item setColornew" href="#">Adakka Plates</a></li>
+                  <li><a class="dropdown-item setColornew" href="#">Coco Peat for gardening</a></li>
+                  <li><a class="dropdown-item setColornew" href="#">Cotton Bags</a></li>
+                  <li><a class="dropdown-item setColornew" href="#">Bamboo water Bottles and Cups</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Food Products</a>
+              </li>
+
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle setColornew" href="#">Farming Products&#9658;</a>
+                <ul class="dropdown-menu setPosition">
+                  <li><a class="dropdown-item setColornew" href="#">BioMyc – Organic farming</a></li>
+                  <li><a class="dropdown-item setColornew" href="#">Cocoa Peat for farming</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
 
           <li class="dropdown nav-item mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Insights<b class="caret"></b></a>
             <ul class="dropdown-menu mega-dropdown-menu">
-              <li><a href="insights_sustainability-theory.html">Sustainability Theory</a></li>
-              <li><a href="coming-soon.html">Promoting Employment</a></li>
-              <li><a href="coming-soon.html">Connecting Worlds</a></li>
-              <li><a href="coming-soon.html">Powering Dreams</a></li>
-              <li><a href="coming-soon.html">Community engagement</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Sustainability Theory</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Promoting Employment</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Connecting Worlds</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Powering Dreams</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Community engagement</a></li>
             </ul>
           </li>
 
           <li class="dropdown nav-item mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dreamers<b class="caret"></b></a>
             <ul class="dropdown-menu mega-dropdown-menu">
-              <li><a href="coming-soon.html">The Grand Aster’s Dream</a></li>
-              <li><a href="coming-soon.html">Innovation Council</a></li>
-              <li><a href="coming-soon.html">Living in Oceans</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">The Grand Aster’s Dream</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Innovation Council</a></li>
+              <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle setColornew" href="#">Living in Oceans</a></li>
             </ul>
           </li>
 
@@ -874,7 +990,21 @@
       $("#site-header").removeClass("nav-fixed");
     }
   });
+  $('.dropdown-menu a.dropdown-toggle').on('click', function(e) {
+  if (!$(this).next().hasClass('show')) {
+    $(this).parents('.dropdown-menu').first().find('.show').removeClass('show');
+  }
+  var $subMenu = $(this).next('.dropdown-menu');
+  $subMenu.toggleClass('show');
 
+
+  $(this).parents('li.nav-item.dropdown.show').on('hidden.bs.dropdown', function(e) {
+    $('.dropdown-submenu .show').removeClass('show');
+  });
+
+
+  return false;
+});
   //Main navigation Active Class Add Remove
   $(".navbar-toggler").on("click", function () {
     $("header").toggleClass("active");
